# entity-component-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
components/: camera.cpp  camera.hpp  component.cpp  component.hpp  controller.cpp  controller.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
engine/: engine.cpp  engine.hpp
entities/: entity.cpp  entity.hpp
misc/: named.cpp  printable.cpp  printable.hpp
resources/: assets.json  entities.json
resources/models/: README.md  process_models.py
resources/shaders/: fragment.shader  vertex.shader
src/: main.cpp
src/assets/: asset.cpp  asset.hpp  assetmanager.cpp  assetmanager.hpp  assetmanager.inl  modelasset.cpp  modelasset.hpp  textureasset.cpp  textureasset.hpp
src/assets/render/: modelasset.cpp  modelasset.hpp  textureasset.cpp  textureasset.hpp
src/assets/rendering/: program.cpp  program.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  controller.cpp  controller.hpp  light.cpp  light.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/components/common/: transform.cpp  transform.hpp
src/components/input/: controller.cpp  controller.hpp
src/components/physics/: rigidbody.cpp  rigidbody.hpp
src/components/render/: camera.cpp  camera.hpp  light.cpp  light.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
src/engine/: engine.cpp  engine.hpp  engine.inl
src/entities/: entity.cpp  entity.hpp  entity.inl
src/misc/: named.cpp  named.hpp  printable.cpp  printable.hpp
src/systems/: input.cpp  input.hpp  render.cpp  render.hpp  system.cpp  system.hpp
src/systems/input/: input.cpp  input.hpp
src/systems/physics/: physics.cpp  physics.hpp
src/systems/render/: program.cpp  program.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/systems/render/shaders/: fragment.shader  vertex.shader
src/utils/: utils.cpp  utils.hpp
systems/: input.cpp  input.hpp  render.cpp  render.hpp  system.cpp  system.hpp
utils/: cube.cpp  cube.hpp  utils.cpp  utils.hpp
utils/rendering/: program.cpp  program.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
